welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
def hunt(y:Color) {if (estSurBiscuit()){prendBiscuit();return{}};if (isFacingTrail()) {baisseBrosse();leveBrosse();avance();hunt()}; else {left();hunt()}
                                                                                  ^SlugSnail:2: error: not enough arguments for method hunt: (y: java.awt.Color)Unit.
Unspecified value parameter y.
def hunt(y:Color) {if (estSurBiscuit()){prendBiscuit();return{}};if (isFacingTrail()) {baisseBrosse();leveBrosse();avance();hunt()}; else {left();hunt()}
                                                                                                                                ^SlugSnail:2: error: not enough arguments for method hunt: (y: java.awt.Color)Unit.
Unspecified value parameter y.
def hunt(y:Color) {if (estSurBiscuit()){prendBiscuit();return{}};if (isFacingTrail()) {baisseBrosse();leveBrosse();avance();hunt()}; else {left();hunt()}
                                                                                                                                                      ^